# MineCompanionAI-WebUI

./: .codex  .env.example  .gitattributes  .gitignore  .npmrc  README.md  RELEASE.md  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.lock.txt
.zed/: settings.json
api/: health.py  middleware.py  monitor_ws.py  protocol.py  rate_limiter.py  stats.py  validation.py  websocket.py
api/handlers/: __init__.py  base.py  connection.py  context.py  conversation.py  engine_init.py  game_state.py  player_lifecycle.py  player_message.py  registry.py  world_diff.py
api/routes/: llm.py  llm_mock.py
config/: settings.example.json  settings.py
core/: dependencies.py  interfaces.py  logging_config.py
core/engine/: __init__.py  manager.py  runtime.py  session.py
core/llm/: cache.py  service.py
core/memory/: conversation_context.py
core/monitor/: connection_manager.py  (+7 more)
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
models/: message.py  monitor.py
scripts/: start-backend.js  start-dev.js  wait-backend.js  wait-for-backend.js
static/: main.js  style.css
tests/: conftest.py  run_protocol_token_tests.py  test_cache_key.py  test_connection_handler.py  test_connection_tracker.py  test_conversation_handler.py  test_event_bus.py  test_game_state_handler.py  test_llm_response_parsing.py  test_llm_service.py  test_message_stats.py  test_rate_limiter.py  test_settings.py  test_storage.py  test_token_usage.py  test_validation.py
wasm/: hello_wasm.d.ts  llmnemeust_bg_test.wasm
(+94 files in other folders)
