[project]
name = "minecompanionai-webui"
version = "0.5.0-beta"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "anthropic>=0.73.0",
    "fastapi>=0.121.2",
    "litellm>=1.80.0",
    "openai>=2.8.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=5.0.8",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
]
redis = [
    "redis>=5.0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
